# mongoose

./: Cargo.toml  Makefile.toml  README.md  build.rs
.github/workflows/: build.sh  releases.yaml  run-tests.yaml
benches/: bench.rs
src/: cotter.rs  lib.rs  ms.rs  rts.rs
src/coords/: enh.rs  mod.rs  xyz.rs
src/erfa/: mod.rs
src/fits/: error.rs  mod.rs  uvfits.rs
src/time/: mod.rs
tests/: rts-in-file-generator.rs
