[package]
name = "mongoose"
version = "0.2.0"
authors = ["Christopher H. Jordan <christopherjordan87@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[profile.release]
lto = true
opt-level = 'z'  # Optimize for size.
panic = 'abort'

[build-dependencies]
bindgen = "0.55.1"
pkg-config = "0.3.19"

[dev-dependencies]
approx = "0.3.2"
assert_cmd = "1.0.1"
criterion = "0.3.3"
tempfile = "3.1.0"
zip = "0.5.6"

[dependencies]
anyhow = "1.0.33"
chrono = "0.4.19"
fitsio = "0.16.0"
fitsio-sys = "0.3.0"
globset = "0.4.5"
hifitime = "1.0.11"
indicatif = "0.15.0"
itertools = "0.9.0"
lazy_static = "1.4.0"
mwalib = { git = "https://github.com/MWATelescope/mwalib", tag = "v0.4.1" }
# ndarray = "0.13.1"
ndarray = { git = "https://github.com/cjordan/ndarray", branch = "num-complex" }
num-complex = "0.3.0"
rayon = "1.4.1"
regex = "1.3.9"
# rubbl_casatables = "0.1.5"
rubbl_casatables = { git = "https://github.com/cjordan/rubbl", branch = "num-complex" }
structopt = "0.3.20"
thiserror = "1.0.21"

[[bench]]
name = "bench"
harness = false
