[package]
name = "mongoose"
version = "0.2.3"
authors = ["Christopher H. Jordan <christopherjordan87@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[profile.release]
lto = true
opt-level = 'z'  # Optimize for size.
panic = 'abort'

[features]
default = []
erfa-static = ["erfa-sys/static"]

[dev-dependencies]
approx = "0.3.2"
assert_cmd = "1.0.2"
criterion = "0.3.3"
tempfile = "3.1.0"
zip = "0.5.6"

[dependencies]
anyhow = "1.0.35"
chrono = "0.4.19"
erfa-sys = "0.1.2"
fitsio = "0.16.0"
fitsio-sys = "0.3.0"
globset = "0.4.6"
hifitime = "1.0.11"
indicatif = "0.15.0"
itertools = "0.9.0"
mwalib = { git = "https://github.com/MWATelescope/mwalib", tag = "v0.4.4" }
ndarray = "0.14.0"
num-complex = "0.3.1"
rubbl_casatables = "0.2.2"
structopt = "0.3.21"
thiserror = "1.0.22"

[[bench]]
name = "bench"
harness = false
